# pac-man

./: .gitignore  Cargo.toml  Makefile  clippy.toml  justfile
src/: diagnostics.rs  food.rs  from_env.rs  game_over.rs  ghost.rs  grid.rs  layout.rs  level.rs  main.rs  mode.rs  movement.rs  player.rs  score.rs  text.rs  ui.rs
src/actor/: mod.rs  mode.rs  movement.rs  player.rs
src/actor/ghost/: assets.rs  blinky.rs  clyde.rs  house.rs  inky.rs  mod.rs  pinky.rs
src/ghost/: assets.rs  blinky.rs  clyde.rs  inky.rs  mod.rs  pinky.rs  spawner.rs
