[package]
name = "pac-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy-inspector-egui = "0.14.0"
bevy_prototype_debug_lines = "0.9.0"
lazy_static = "1.4.0"
rand = "0.8.5"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
